# routes/index.js
@@ -4,5 +4,8 @@ const router = express.Router()
 const book = require('./book.js')
 
 router.get("/books", book.get)
+router.post("/books", book.post)
+router.delete("/books/:id", book,deleteBook)
+router.patch("/books/:id", book.patch)
 
 module.exports = router
